--- a/index.html
+++ b/index.html
@@ -4186,78 +4186,381 @@ function startMotionDetection() {
     }
   }
 
-  function fallbackVoiceCommand() {
+  function promptForCommand() {
     toggleVoiceButtonListening(false);
     const typed = prompt('Enter command');
-    if (typed === null) {
-      return;
+    if (typed !== null) {
+      interpretVoiceCandidates([typed]);
     }
-    interpretVoiceCandidates([typed]);
   }
 
-  function handleVoiceButtonTap() {
-    const SpeechRecognition = window.SpeechRecognition || window.webkitSpeechRecognition;
-    if (!SpeechRecognition) {
-      fallbackVoiceCommand();
-      return;
+  const VoiceController = (() => {
+    const SILENCE_MS = 3000;
+    let activeSession = null;
+
+    function resetSilenceTimer(session) {
+      if (!session) return;
+      session.lastSpeechAt = Date.now();
+      if (session.silenceTimer) {
+        clearTimeout(session.silenceTimer);
+      }
+      session.silenceTimer = setTimeout(() => finalizeSession(session), SILENCE_MS);
     }
 
-    let recognition;
-    try {
-      recognition = new SpeechRecognition();
-    } catch (err) {
-      fallbackVoiceCommand();
-      return;
-    }
+    function cleanupSession(session, skipInterpret = false) {
+      if (!session) return;
+      if (session.silenceTimer) clearTimeout(session.silenceTimer);
+      if (session.vadInterval) clearInterval(session.vadInterval);
+      if (session.vadRaf) cancelAnimationFrame(session.vadRaf);
 
-    let handled = false;
-    let aborted = false;
+      if (session.mode === 'droid' && session.rec) {
+        try { session.rec.Stop(); } catch (err) { /* ignore */ }
+      }
 
-    recognition.lang = 'en-US';
-    recognition.interimResults = false;
-    recognition.maxAlternatives = 5;
+      if (session.mode === 'web' && session.recognition) {
+        session.recognition.onend = null;
+        session.recognition.onresult = null;
+        session.recognition.onerror = null;
+        try { session.recognition.stop(); } catch (err) { /* ignore */ }
+      }
 
-    recognition.onstart = () => {
-      toggleVoiceButtonListening(true);
-    };
+      if ((session.mode === 'web' || session.mode === 'vadPrompt') && session.stream) {
+        try {
+          session.stream.getTracks().forEach(track => track.stop());
+        } catch (err) { /* ignore */ }
+      }
 
-    recognition.onresult = event => {
-      const transcripts = [];
-      for (let i = 0; i < event.results.length; i++) {
-        const result = event.results[i];
-        for (let j = 0; j < result.length; j++) {
-          transcripts.push(result[j].transcript);
+      if ((session.mode === 'web' || session.mode === 'vadPrompt') && session.audioCtx) {
+        try { session.audioCtx.close(); } catch (err) { /* ignore */ }
+      }
+
+      toggleVoiceButtonListening(false);
+      if (!skipInterpret) {
+        const transcripts = session.transcripts ? session.transcripts.slice() : [];
+        if (!transcripts.length && session.lastInterim) {
+          transcripts.push(session.lastInterim);
+        }
+
+        if (session.mode === 'vadPrompt') {
+          promptForCommand();
+        } else {
+          interpretVoiceCandidates(transcripts);
         }
       }
-      handled = true;
-      interpretVoiceCandidates(transcripts);
-    };
-
-    recognition.onerror = () => {
-      aborted = true;
-      toggleVoiceButtonListening(false);
-      fallbackVoiceCommand();
-    };
-
-    recognition.onend = () => {
-      toggleVoiceButtonListening(false);
-      if (!handled && !aborted) {
-        interpretVoiceCandidates([]);
-      }
-    };
-
-    try {
-      recognition.start();
-    } catch (err) {
-      aborted = true;
-      toggleVoiceButtonListening(false);
-      fallbackVoiceCommand();
     }
-  }
+
+    function finalizeSession(session) {
+      if (!activeSession || session !== activeSession || session.finalizing) {
+        return;
+      }
+      session.finalizing = true;
+      const currentSession = activeSession;
+      activeSession = null;
+      cleanupSession(currentSession);
+    }
+
+    function abortSession(session) {
+      if (!activeSession || session !== activeSession) {
+        return;
+      }
+      activeSession = null;
+      cleanupSession(session, true);
+    }
+
+    function ensureAnalyserData(analyser) {
+      const supportsFloat = typeof analyser.getFloatTimeDomainData === 'function';
+      return {
+        supportsFloat,
+        buffer: supportsFloat ? new Float32Array(analyser.fftSize) : new Uint8Array(analyser.fftSize)
+      };
+    }
+
+    function monitorStream(session, analyser, dataObj) {
+      const threshold = 0.015;
+
+      const loop = () => {
+        if (!activeSession || session !== activeSession || session.finalizing) {
+          return;
+        }
+
+        let rms = 0;
+        if (dataObj.supportsFloat) {
+          analyser.getFloatTimeDomainData(dataObj.buffer);
+          let sumSquares = 0;
+          for (let i = 0; i < dataObj.buffer.length; i++) {
+            const sample = dataObj.buffer[i];
+            sumSquares += sample * sample;
+          }
+          rms = Math.sqrt(sumSquares / dataObj.buffer.length);
+        } else {
+          analyser.getByteTimeDomainData(dataObj.buffer);
+          let sumSquares = 0;
+          for (let i = 0; i < dataObj.buffer.length; i++) {
+            const centered = (dataObj.buffer[i] - 128) / 128;
+            sumSquares += centered * centered;
+          }
+          rms = Math.sqrt(sumSquares / dataObj.buffer.length);
+        }
+
+        if (rms > threshold) {
+          resetSilenceTimer(session);
+        }
+
+        session.vadRaf = requestAnimationFrame(loop);
+      };
+
+      loop();
+    }
+
+    function startDroidSession() {
+      if (!window.app || typeof app.CreateSpeechRec !== 'function') {
+        return false;
+      }
+
+      let rec;
+      try {
+        rec = app.CreateSpeechRec();
+      } catch (err) {
+        return false;
+      }
+
+      if (!rec) {
+        return false;
+      }
+
+      const session = {
+        mode: 'droid',
+        transcripts: [],
+        lastInterim: ''
+      };
+
+      activeSession = session;
+      toggleVoiceButtonListening(true);
+
+      try {
+        rec.SetOnResult(result => {
+          if (!activeSession || session !== activeSession) {
+            return;
+          }
+
+          const collected = [];
+          if (Array.isArray(result)) {
+            collected.push(...result);
+          } else if (typeof result === 'string') {
+            collected.push(result);
+          }
+
+          collected.forEach(text => {
+            if (text) {
+              session.transcripts.push(text);
+            }
+          });
+
+          resetSilenceTimer(session);
+        });
+      } catch (err) {
+        abortSession(session);
+        return false;
+      }
+
+      try {
+        if (typeof rec.SetOnError === 'function') {
+          rec.SetOnError(() => finalizeSession(session));
+        }
+      } catch (err) {
+        // ignore SetOnError wiring issues
+      }
+
+      if (typeof rec.IsListening === 'function') {
+        session.vadInterval = setInterval(() => {
+          try {
+            const listening = rec.IsListening();
+            if (listening && !session.pollIndicatedSpeech) {
+              session.pollIndicatedSpeech = true;
+              resetSilenceTimer(session);
+            } else if (!listening) {
+              session.pollIndicatedSpeech = false;
+            }
+          } catch (err) {
+            // ignore polling issues
+          }
+        }, 400);
+      }
+
+      session.rec = rec;
+      resetSilenceTimer(session);
+
+      try {
+        rec.Listen();
+      } catch (err) {
+        abortSession(session);
+        return false;
+      }
+
+      return true;
+    }
+
+    function startWebSession() {
+      const SpeechRecognition = window.SpeechRecognition || window.webkitSpeechRecognition;
+      if (!SpeechRecognition) {
+        return false;
+      }
+
+      let recognition;
+      try {
+        recognition = new SpeechRecognition();
+      } catch (err) {
+        return false;
+      }
+
+      const session = {
+        mode: 'web',
+        transcripts: [],
+        lastInterim: ''
+      };
+
+      activeSession = session;
+      toggleVoiceButtonListening(true);
+
+      recognition.lang = 'en-US';
+      recognition.interimResults = true;
+      recognition.continuous = true;
+      recognition.maxAlternatives = 1;
+
+      recognition.onresult = event => {
+        if (!activeSession || session !== activeSession || session.finalizing) {
+          return;
+        }
+
+        for (let i = event.resultIndex; i < event.results.length; i++) {
+          const result = event.results[i];
+          const transcript = result[0] && result[0].transcript ? result[0].transcript : '';
+          if (!transcript) continue;
+
+          if (result.isFinal) {
+            session.transcripts.push(transcript);
+            session.lastInterim = '';
+          } else {
+            session.lastInterim = transcript;
+          }
+        }
+
+        resetSilenceTimer(session);
+      };
+
+      recognition.onerror = () => finalizeSession(session);
+      recognition.onnomatch = () => finalizeSession(session);
+      recognition.onend = () => finalizeSession(session);
+
+      try {
+        recognition.start();
+      } catch (err) {
+        abortSession(session);
+        return false;
+      }
+
+      session.recognition = recognition;
+      resetSilenceTimer(session);
+
+      if (navigator.mediaDevices && typeof navigator.mediaDevices.getUserMedia === 'function') {
+        navigator.mediaDevices.getUserMedia({ audio: true }).then(stream => {
+          if (!activeSession || session !== activeSession || session.finalizing) {
+            stream.getTracks().forEach(track => track.stop());
+            return;
+          }
+
+          session.stream = stream;
+
+          const AudioContext = window.AudioContext || window.webkitAudioContext;
+          if (!AudioContext) {
+            resetSilenceTimer(session);
+            return;
+          }
+
+          const audioCtx = new AudioContext();
+          session.audioCtx = audioCtx;
+          const source = audioCtx.createMediaStreamSource(stream);
+          const analyser = audioCtx.createAnalyser();
+          analyser.fftSize = 2048;
+          source.connect(analyser);
+
+          const dataObj = ensureAnalyserData(analyser);
+          resetSilenceTimer(session);
+          monitorStream(session, analyser, dataObj);
+        }).catch(() => finalizeSession(session));
+      }
+
+      return true;
+    }
+
+    function startVadPromptSession() {
+      if (!navigator.mediaDevices || typeof navigator.mediaDevices.getUserMedia !== 'function') {
+        promptForCommand();
+        return true;
+      }
+
+      const session = {
+        mode: 'vadPrompt',
+        transcripts: [],
+        lastInterim: ''
+      };
+
+      activeSession = session;
+      toggleVoiceButtonListening(true);
+      resetSilenceTimer(session);
+
+      navigator.mediaDevices.getUserMedia({ audio: true }).then(stream => {
+        if (!activeSession || session !== activeSession || session.finalizing) {
+          stream.getTracks().forEach(track => track.stop());
+          return;
+        }
+
+        session.stream = stream;
+
+        const AudioContext = window.AudioContext || window.webkitAudioContext;
+        if (!AudioContext) {
+          return;
+        }
+
+        const audioCtx = new AudioContext();
+        session.audioCtx = audioCtx;
+        const source = audioCtx.createMediaStreamSource(stream);
+        const analyser = audioCtx.createAnalyser();
+        analyser.fftSize = 2048;
+        source.connect(analyser);
+
+        const dataObj = ensureAnalyserData(analyser);
+        monitorStream(session, analyser, dataObj);
+      }).catch(() => {
+        abortSession(session);
+        promptForCommand();
+      });
+
+      return true;
+    }
+
+    function startListening() {
+      if (activeSession) {
+        return;
+      }
+
+      if (startDroidSession()) {
+        return;
+      }
+
+      if (startWebSession()) {
+        return;
+      }
+
+      startVadPromptSession();
+    }
+
+    return { startListening };
+  })();
 
   const voiceButton = document.getElementById('voice-command-button');
   if (voiceButton) {
-    voiceButton.addEventListener('click', handleVoiceButtonTap);
+    voiceButton.addEventListener('click', () => VoiceController.startListening());
   }
 
   /* ===== Initialization ===== */
